# TemplateAutoTest

./: .env  .gitignore  conftest.py  pyproject.toml  pytest.ini  settings.py
base_tests/: conftest.py  web_tests.py
data_test/data_class_users/: users.py
test_data/: __init__.py
test_data/data_class_users/: users.py
utils/: data_generate_helper.py
web/: __init__.py
web/pages/auth_page/: auth_page.py  locators.py
web/pages/base_page/: base_locators.py  base_page.py
web/pages/info_messages/: info_erorros_messages.py
web/pages/inventory_page/: inventory_page.py  locators.py
