[project]
name = "templateautotest"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel",email = "savchukpa@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "allure-pytest (>=2.15.0,<3.0.0)",
    "selenium (>=4.34.2,<5.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

